More work on packages, plugins and tests.